--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -8,8 +8,10 @@
 <body>
     <h1>This is Services Page</h1>
     <!-- using fragment -->
-    <div class="host-tag" th:replace="~{base :: parent('services one','services two')}">
-
+    <div class="host-tag" th:replace="~{base :: parent(~{::section})}">
+        <section>
+            <h1>This is Dynamic services passed to base parent</h1>
+        </section>
     </div>
 </body>
 </html>
