--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,6 +1,5 @@
-<div class="fragment-tag" th:fragment="parent(x,y)">
+<div class="fragment-tag" th:fragment="parent(content)">
     <h1>This is Parent Fragment</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, voluptate?</p>
-    <h1>Value of x is <span th:text="${x}"></span></h1>
-    <h1>Value of y is <span th:text="${y}"></span></h1>
+    <div th:replace="${content}"></div>
 </div>
