fragment using class

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -3,3 +3,7 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, voluptate?</p>
     <div th:replace="${content}"></div>
 </div>
+
+<div th:fragment="test">
+    <h1>This is testing fragment</h1>
+</div>
