--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -8,12 +8,15 @@
 <body>
     <h1>This is Services Page</h1>
     <!-- using fragment -->
-    <div class="host-tag" th:replace="~{base :: parent(~{::#second_content})}">
+    <div class="host-tag" th:replace="~{base :: parent(~{::.third_content})}">
         <section id="main_content">
             <h1>This is Dynamic services passed to base parent</h1>
         </section>
         <section id="second_content">
             <h1>This is Second Content</h1>
+        </section>
+        <section class="third_content">
+            <h1>This is Third Content</h1>
         </section>
     </div>
 </body>
