--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,10 +8,11 @@
 <body>
     <h1>This is About Page</h1>
     <!-- using fragment -->
-     <div class="host-tag" th:replace="~{base :: parent(~{::section})}">
+     <div class="host-tag" th:replace="${isLogin}  ? ~{base :: parent(~{::section})} : ~{base:: test}">
         <section>
-            <h1>Dynamic Content</h1>
-            <p>This is Dynamic content</p>
+            <h1>User is logged in</h1>
+            <h2>Dynamic Content</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos qui quam architecto maiores, harum quia tempora quidem fuga distinctio fugit?</p>
             <button>Click on Dynamic Content</button>
         </section>
      </div>
