--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,12 +8,16 @@
 <body>
     <h1>This is About Page</h1>
     <!-- using fragment -->
-     <div class="host-tag" th:replace="${isLogin}  ? ~{base :: parent(~{::section})} : ~{base:: test}">
+     <div class="host-tag" th:replace="${isLogin}  ? ~{base :: parent(~{::section})} : ~{base:: test(~{::#not_logged_in})}">
         <section>
             <h1>User is logged in</h1>
             <h2>Dynamic Content</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos qui quam architecto maiores, harum quia tempora quidem fuga distinctio fugit?</p>
             <button>Click on Dynamic Content</button>
+        </section>
+
+        <section id="not_logged_in">
+            <h1>User is not logged in</h1>
         </section>
      </div>
 </body>
